Upstream versioning snapshot
Signed-off-by: David Greven <opensource@grevend.dev>